kubernetes/apps/thingsboard/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thingsboard
  namespace: thingsboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thingsboard
  template:
    metadata:
      labels:
        app: thingsboard
    spec:
      containers:
        - name: thingsboard
          image: thingsboard/tb-postgres:3.8.1
          ports:
            - containerPort: 9090
            - containerPort: 1883
            - containerPort: 7070
          volumeMounts:
            - name: thingsboard-storage
              mountPath: /data
            - name: thingsboard-export
              mountPath: /imports/e_shop_events.json
              subPath: e_shop_events.json
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1500m"
      volumes:
        - name: thingsboard-storage
          persistentVolumeClaim:
            claimName: thingsboard-pvc
        - name: thingsboard-export
          configMap:
            name: thingsboard-export
---
apiVersion: v1
kind: Service
metadata:
  name: thingsboard
  namespace: thingsboard
spec:
  selector:
    app: thingsboard
  ports:
    - name: http
      port: 9090
      targetPort: 9090
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: edge
      port: 7070
      targetPort: 7070
