kubernetes/apps/thingsboard/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thingsboard-ingress
  namespace: thingsboard
spec:
  ingressClassName: traefik
  rules:
    - host: thingsboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thingsboard
                port:
                  number: 9090
